[project]
name = "ltx-tui-wrapper"
version = "0.1.0"
description = "Trogon TUI wrapper for ltx-2-mlx video generation on Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "ltx-core-mlx",
    "ltx-pipelines-mlx",
    "trogon>=0.6.0",
]

[project.scripts]
ltx-tui = "ltx_tui_wrapper.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ltx_tui_wrapper"]

[tool.uv.sources]
ltx-core-mlx = { git = "https://github.com/dgrauet/ltx-2-mlx", subdirectory = "packages/ltx-core-mlx" }
ltx-pipelines-mlx = { git = "https://github.com/dgrauet/ltx-2-mlx", subdirectory = "packages/ltx-pipelines-mlx" }
