[project]
name = "ltx-tui-wrapper"
version = "0.1.0"
description = "Textual TUI for building and running ltx-2-mlx generate commands on Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ltx-core-mlx",
    "ltx-pipelines-mlx",
    "textual>=0.80",
]

[project.scripts]
ltx-tui = "ltx_tui_wrapper.cli:main"
ltx-tui-batch = "ltx_tui_wrapper.batch_cli:main"
ltx-tui-extend = "ltx_tui_wrapper.extend_cli:main"
ltx-tui-upscale = "ltx_tui_wrapper.upscale_cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ltx_tui_wrapper"]

[tool.uv.sources]
ltx-core-mlx = { git = "https://github.com/dgrauet/ltx-2-mlx", subdirectory = "packages/ltx-core-mlx" }
ltx-pipelines-mlx = { git = "https://github.com/dgrauet/ltx-2-mlx", subdirectory = "packages/ltx-pipelines-mlx" }
